--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -104,8 +104,7 @@ ul{
 	-webkit-appearance: none;
 	border: none;
 	  height: 21px;
-
-
+    line-height: 1em;
 }
 .enter-block {
 	padding-top: 23px;
@@ -739,17 +738,6 @@ p{
 	margin-left: 25px;
 	font: 10px 'Helvetica', sans-serif;
 	color: #999999;
-}
-.dict-title h3{
-	font: 26px/31px 'Condensed-Bold', sans-serif;
-	text-transform: uppercase;
-	font-weight: bold;
-	margin-left: 25px;
-	padding-bottom: 5px;
-	color: #999999;
-	vertical-align: 30px;
-	position: relative;
-
 }
 .showsettings {
 	display: none;
