fixed tip of the day lost

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -89,7 +89,7 @@
 				</ul>
 			</div>
 		<div class="middle-section">
-		<div class="top-line clearfix">
+		<div class="top-line clearfix tip-of-the-day">
 				<div class="allocation">
 					<p>Click unknown word to see its translation<span class="close-cross"></span></p>
 				</div>
