refactored dict popup

--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -825,12 +825,12 @@ p{
 }
 
 .slider-check {
-
-	width: 50px;
-	height: 15px;
-	background: #E5E5E5;
-	margin-right: 0;
-
+    vertical-align: middle;
+	width: 40px;
+	height: 18px;
+	background: #fff;
+	margin-left: 15px;
+    display: inline-block;
 
 	-webkit-border-radius: 50px;
 	-moz-border-radius: 50px;
@@ -921,115 +921,7 @@ p{
 .slider-check input[type=checkbox]:checked + label:after {
 	background: #00bf00;
 }
-.slider-check2 {
 
-	width: 50px;
-	height: 15px;
-	background: #E5E5E5;
-
-	-webkit-border-radius: 50px;
-	-moz-border-radius: 50px;
-	border-radius: 50px;
-	position: relative;
-
-	-webkit-box-shadow: inset 0px 1px 1px rgba(0,0,0,0.5), 0px 1px 0px rgba(255,255,255,0.2);
-	-moz-box-shadow: inset 0px 1px 1px rgba(0,0,0,0.5), 0px 1px 0px rgba(255,255,255,0.2);
-	box-shadow: inset 0px 1px 1px rgba(0,0,0,0.5), 0px 1px 0px rgba(255,255,255,0.2);
-}
-
-.slider-check2:after {
-	content: '';
-	position: absolute;
-	top: 7px;
-	left: 10px;
-	height: 2px;
-	width: 32px;
-
-	-webkit-border-radius: 50px;
-	-moz-border-radius: 50px;
-	border-radius: 50px;
-	background: white;
-
-	-webkit-box-shadow: inset 0px 1px 1px rgba(0,0,0,0.5), 0px 1px 0px rgba(255,255,255,0.2);
-	-moz-box-shadow: inset 0px 1px 1px rgba(0,0,0,0.5), 0px 1px 0px rgba(255,255,255,0.2);
-	box-shadow: inset 0px 1px 1px rgba(0,0,0,0.5), 0px 1px 0px rgba(255,255,255,0.2);
-}
-.slider-check2 label {
-	display: inline-block;
-	width: 12px;
-	height: 12px;
-
-	-webkit-border-radius: 50px;
-	-moz-border-radius: 50px;
-	border-radius: 50px;
-
-	-webkit-transition: all .4s ease;
-	-moz-transition: all .4s ease;
-	-o-transition: all .4s ease;
-	-ms-transition: all .4s ease;
-	transition: all .4s ease;
-	cursor: pointer;
-	position: absolute;
-	top: 1px;
-	z-index: 1;
-	left: 4px;
-
-	-webkit-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.3);
-	-moz-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.3);
-	box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.3);
-	background: #fcfff4;
-
-	background: -webkit-linear-gradient(top, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
-	background: -moz-linear-gradient(top, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
-	background: -o-linear-gradient(top, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
-	background: -ms-linear-gradient(top, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
-	background: linear-gradient(top, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcfff4', endColorstr='#b3bead',GradientType=0 );
-}
-
-.slider-check2 label:after {
-	content: '';
-	position: absolute;
-	width: 6px;
-	height: 6px;
-
-	-webkit-border-radius: 50px;
-	-moz-border-radius: 50px;
-	border-radius: 50px;
-	background: #2a81b4;
-	left: 3px;
-	top: 3px;
-
-	-webkit-box-shadow: inset 0px 1px 1px rgba(0,0,0,1), 0px 1px 0px rgba(255,255,255,0.9);
-	-moz-box-shadow: inset 0px 1px 1px rgba(0,0,0,1), 0px 1px 0px rgba(255,255,255,0.9);
-	box-shadow: inset 0px 1px 1px rgba(0,0,0,1), 0px 1px 0px rgba(255,255,255,0.9);
-}
-
-.slider-check2 input[type=checkbox]:checked + label {
-	left: 34px;
-}
-
-.slider-check2 input[type=checkbox]:checked + label:after {
-	background: #00bf00;
-}
-.left-col-func{
-	font: 12px 'Helvetica', sans-serif;
-	float: left;
-	width: 95px;
-	color: #B2B2B2;
-	padding-left: 20px;
-}
-.right-col-func{
-	font: 15px 'Helvetica', sans-serif;
-	color: #5D5D5D;
-	width: 30%;
-	float: right;
-	position: relative;
-	height: 0px;
-}
-.choice{
-
-}
  h5{
 	margin-bottom: 16px;
 	margin-top: 0;
@@ -1079,14 +971,6 @@ p{
 	background: url("../img/native-ic.png") no-repeat center;
 }
 
-.left-title-save{
-	font: 11px 'Helvetica', sans-serif;
-	font-weight: bold;
-}
-.left-title-show{
-	font: 11px 'Helvetica', sans-serif;
-	font-weight: bold;
-}
 .sorting-block{
 	margin-left: 20px;
 	margin-top: 20px;
@@ -1306,7 +1190,7 @@ p{
 	margin-top: 20px;
 
 }
-.sorting-block select {
+.sorting-block-select {
 background: #eeeeee;
   border: none;
   margin-left: 30px;
@@ -1692,15 +1576,7 @@ input[type=range]::-webkit-slider-runnable-track {
 .dict-title:after {
   display: none;
 }
-.left-title-save, .right-col-func-select-1, .left-title-show, .right-col-func-select-2 {
-  display: none;
-}
-.slider-check2 {
-  margin-top: 15px;
-  position: relative;
-  left: 35px;
-}
-.left-title-auto {
+.left-title {
   display: inline-block;
   margin: 0;
   margin-top: 6px;
@@ -1708,44 +1584,15 @@ input[type=range]::-webkit-slider-runnable-track {
   font: 14px 'Helvetica', sans-serif;
   color: black;
 }
-.left-title-word {
-  display: inline-block;
-  margin: 0;
-   font: 14px 'Helvetica', sans-serif;
-   color: black;
-   position: relative;
-   left: 70px;
-}
-.slider-check {
-  display: inline-block;
-  position: relative;
-  right: 90px;
-  bottom: 24px;
-  width: 40px;
-  height: 18px;
-  background: white;
-  border: 1px solid #808080;
-  box-shadow: none;
-}
-.slider-check2 {
-  display: inline-block;
-  width: 40px;
-  height: 18px;
-  background: white;
-   border: 1px solid #808080;
-   box-shadow: none;
-   right: 20px;
-   bottom: 24px;
-   margin-top: 0;
+.dict__setting {
+    margin: 0 10px;
+    display: inline-block;
 }
 .sorting-block-title, .sortby, .time {
   color: black;
   font: 14px 'Helvetica-Med', sans-serif;
 }
 .slider-check label:after {
-  display: none;
-}
-.slider-check2 label:after {
   display: none;
 }
 .slider-check:after {
@@ -1760,15 +1607,6 @@ input[type=range]::-webkit-slider-runnable-track {
    top: -1px;
    left: -1px;
 }
-.slider-check2 label {
-  width: 18px;
-  height: 18px;
-  box-shadow: none;
-  background: #eeeeee;
-  border: 1px solid #808080;
-   top: -1px;
-   left: -1px;
-}
 .slider-check input[type=checkbox]:checked + label {
   left: 24px;
 }
@@ -1779,20 +1617,6 @@ input[type=range]::-webkit-slider-runnable-track {
 .slider-check input[type=checkbox]:checked .slider-check {
   background: #7cc331;
 
-}
-.slider-check2 input[type=checkbox]:checked + label {
-  left: 24px;
-}
-.slider-check2 input[type=checkbox]:checked + label {
-  border: 1px solid #7cc331;
-  box-shadow: 0 0 3px rgba(0,0,0,0.5);
-}
-.slider-check2 input[type=checkbox]:checked .slider-check {
-  background: #7cc331;
-
-}
-.slider-check2:after {
-  display: none;
 }
 .left-col-func {
   width: 160px;
@@ -1808,13 +1632,11 @@ input[type=range]::-webkit-slider-runnable-track {
 .sorting-block {
   background: #eeeeee;
   width: 100%;
-  margin: 0;
-  margin-top: 1px;
+  margin: 1px 0 0 0;
   border: none;
 }
 .sorting-block-title {
   margin-left: 20px;
-  margin-top: 0;
   padding-top: 0;
   margin-top: 8px;
 }
