--- a/client/templates/dictionary-word.hbs
+++ b/client/templates/dictionary-word.hbs
@@ -7,7 +7,7 @@
          </div>
          <div class="translating">
              {{#each translations}}
-                 {{this.text}}&nbsp;
+                 {{this.text}},
              {{/each}}
          </div>
      </label>
