--- a/client/templates/dictionary-section.hbs
+++ b/client/templates/dictionary-section.hbs
@@ -3,7 +3,7 @@
 </div>
 <div class="functions">
     <div class="dict__setting">
-        <a class="left-title">My settings</a>
+        <a class="left-title settings-link">My settings</a>
     </div>
 </div>
 <div class="functions">
@@ -31,10 +31,7 @@
 </div>
 <div class="clearfix"></div>
 <div class="dictionary ">
-    <div class="text-block">
-    </div>
-   
-      <div class="word-delete top">Delete selected</div>
-        <div class="word-cancel top">Cancel</div>
-         
+    <div class="text-block"></div>
+    <div class="word-delete top">Delete selected</div>
+    <div class="word-cancel top">Cancel</div>
 </div>
