--- a/client/templates/settings.hbs
+++ b/client/templates/settings.hbs
@@ -1,4 +1,4 @@
-<h3 class="settings-header">My settings</h3>
+<h3 class="settings-header">My settings<span class="close-cross"></span></h3>
 <div class="settings-content">
     <div class="functions-language-slider">
         <span>Language difficulty:</span>
@@ -6,11 +6,11 @@
     <div class="range-filter">
             <div class="range-controls">
                 <div class="scale"><div class="bar"></div></div>
-                <input type="radio" id="slidedifficult1" name="check" class="checkbox-cust">
+                <input type="radio" id="slidedifficult1" name="check" class="checkbox-cust settings-radio" value="Easy">
                 <label for="slidedifficult1" class="circle circle1"></label>
-                <input type="radio" id="slidedifficult2" name="check" class="checkbox-cust">
+                <input type="radio" id="slidedifficult2" name="check" class="checkbox-cust settings-radio" value="Medium">
                 <label for="slidedifficult2" class="circle circle2"></label>
-                <input type="radio" id="slidedifficult3" name="check" class="checkbox-cust">
+                <input type="radio" id="slidedifficult3" name="check" class="checkbox-cust settings-radio" value="Hard">
                 <label for="slidedifficult3" class="circle circle3"></label>
             </div>
         </div>
