--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,8 +12,12 @@
 	<link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow:700&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
 </head>
 <body>
+	<div class="popup-wrapper">
+		<div class="functions-language">
+		</div>
+	</div>
 <div class="center-block">
-<div id="content-wrapper">	
+<div id="content-wrapper">
 <div id="pc-container">
 	<div class="background">
 	 <div class="main-header clearfix">
@@ -99,53 +103,8 @@
 
 			<div class="dictionaries-section clearfix">
 			</div>
-			<div class="functions-language functions-language-mini">
-				<h3>My settings</h3>
-				<div class="functions-language-slider">
-					<span>Language difficulty:</span>
-					<span class="level">Medium</span>
-				<div class="range-filter">
-						<div class="range-controls">
-							<div class="scale"><div class="bar"></div></div>
-							<input type="radio" id="slidedifficult1" name="check" class="checkbox-cust">
-							<label for="slidedifficult1" class="circle circle1"></label>
-							<input type="radio" id="slidedifficult2" name="check" class="checkbox-cust">
-							<label for="slidedifficult2" class="circle circle2"></label>
-							<input type="radio" id="slidedifficult3" name="check" class="checkbox-cust">
-							<label for="slidedifficult3" class="circle circle3"></label>
-						</div>
-					</div>
-						<h4 class="functions-news-title">News Sources</h4>
-				<div class="functions-settings-news">
-							<div class="functions-box">
-							<input type="checkbox" class="functions-checkbox-settings" id="bbc">
-							<label for="bbc">BBC</label>
-							</div>
-							<div class="functions-box">
-							<input type="checkbox" class="functions-checkbox-settings" id="tech">
-							<label for="tech">TECHCRUNCH</label>
-							</div>
-							<div class="functions-box">
-							<input type="checkbox" class="functions-checkbox-settings" id="econom">
-							<label for="econom">Economist</label>
-							</div>
-							<div class="functions-box">
-							<input type="checkbox" class="functions-checkbox-settings" id="usatoday">
-							<label for="usatoday">USA Today</label>
-							</div>
-							<div class="functions-box">
-							<input type="checkbox" class="functions-checkbox-settings" id="forbes">
-							<label for="forbes">Forbes</label>
-							</div>
-							<div class="functions-box">
-							<input type="checkbox" class="functions-checkbox-settings" id="telegraph">
-							<label for="telegraph">Telegraph</label>
-							</div>
-				</div>
-			</div>
-			</div>
-			</div>
-			</div>
+		</div>
+		</div>
 
 	</div>
 	<div class="showsettings"><span class="showspan">Show my translations</span></div>
