--- a/client/templates/dictionary-section.hbs
+++ b/client/templates/dictionary-section.hbs
@@ -3,7 +3,7 @@
 </div>
 <div class="functions">
     <div class="dict__setting">
-        <a class="left-title settings-link">My settings</a>
+        <a class="left-title settings-link fake-link">My settings</a>
     </div>
 </div>
 <div class="functions">
