--- a/client/templates/settings.hbs
+++ b/client/templates/settings.hbs
@@ -18,28 +18,32 @@
             <h4 class="functions-news-title">News Sources</h4>
     <div class="functions-settings-news">
                 <div class="functions-box">
-                <input type="checkbox" class="functions-checkbox-settings" id="bbc">
-                <label for="bbc">BBC</label>
+                    <input type="checkbox" value="cnn.com" class="functions-checkbox-settings" id="cnn">
+                    <label for="cnn">CNN</label>
                 </div>
                 <div class="functions-box">
-                <input type="checkbox" class="functions-checkbox-settings" id="tech">
-                <label for="tech">TECHCRUNCH</label>
+                    <input type="checkbox" value="bbc.com" class="functions-checkbox-settings" id="bbc">
+                    <label for="bbc">BBC</label>
                 </div>
                 <div class="functions-box">
-                <input type="checkbox" class="functions-checkbox-settings" id="econom">
-                <label for="econom">Economist</label>
+                    <input type="checkbox" value="economist.com" class="functions-checkbox-settings" id="economist">
+                    <label for="economist">Economist</label>
                 </div>
                 <div class="functions-box">
-                <input type="checkbox" class="functions-checkbox-settings" id="usatoday">
-                <label for="usatoday">USA Today</label>
+                    <input type="checkbox" value="usatoday.com" class="functions-checkbox-settings" id="usatoday">
+                    <label for="usatoday">USA Today</label>
                 </div>
                 <div class="functions-box">
-                <input type="checkbox" class="functions-checkbox-settings" id="forbes">
-                <label for="forbes">Forbes</label>
+                    <input type="checkbox" value="forbes.com" class="functions-checkbox-settings" id="forbes">
+                    <label for="forbes">Forbes</label>
                 </div>
                 <div class="functions-box">
-                <input type="checkbox" class="functions-checkbox-settings" id="telegraph">
-                <label for="telegraph">Telegraph</label>
+                    <input type="checkbox" value="telegraph.co.uk" class="functions-checkbox-settings" id="telegraph">
+                    <label for="telegraph">Telegraph</label>
+                </div>
+                <div class="functions-box">
+                    <input type="checkbox" value="techcrunch.com" class="functions-checkbox-settings" id="techcrunch">
+                    <label for="techcrunch">Techcrunch</label>
                 </div>
     </div>
 </div>
