--- a/client/styles/z-media-queries.css
+++ b/client/styles/z-media-queries.css
@@ -6,8 +6,8 @@
         background-color: rgb(246,246,246);
     }
 
-    #pc-container {
-        margin-bottom: 7vh;
+    .allocation p {
+        width: auto;
     }
 
     .enter-block {
@@ -103,12 +103,6 @@
         font-family: 'Helvetica-Neu', sans-serif;
     }
 
-    .center-content {
-        overflow: scroll;
-        width: auto;
-        height: 76vh;
-    }
-
     .dictionaries-section,
     .functions-language {
         display: none;
@@ -146,6 +140,7 @@
 
     .center-content {
         float: none;
+        width: auto;
         margin-top: 0;
         padding-top: 1vh;
         padding-left: 4vw;
