--- a/client/templates/episode.hbs
+++ b/client/templates/episode.hbs
@@ -6,12 +6,12 @@
         <a class="illustration" style="background-image: url('{{ image }}')" onclick="counter.reachGoal('inside-article')"></a>
     -{{/if}}
     <p class="news">
-        {{{ description }}}
+        {{{ processedDescription }}}
         {{#if body}}
             <a class="episode-more">More...</a>
         {{/if}}
     </p>
     <p class="news episode-body hidden">
-        {{{body}}}
+        {{{ processedBody }}}
     </p>
 </div>
