--- a/client/templates/episode.hbs
+++ b/client/templates/episode.hbs
@@ -1,13 +1,13 @@
 <div class="novelty">
     <h2 class="name-news"><a>{{{ processedTitle }}}</a></h2>
-    <span class="original-article-link">Original&nbsp;article:&nbsp;<a href="{{{ link }}}" target="_blank">{{{ originalArticleLink }}}</a></span>
-    <a href="#"><blockquote class="newsinform">{{ name }} – {{ formattedDate }}</blockquote></a>
+    <span class="original-article-link">Original&nbsp;article:&nbsp;<a href="{{{ link }}}" target="_blank">{{{ originalArticleLink }}}</a></span>&nbsp;&mdash;&nbsp;{{ formattedDate }}
+    <a href="#"><blockquote class="newsinform">{{ name }}</blockquote></a>
     {{#if image}}
         <a class="illustration" style="background-image: url('{{ image }}')" onclick="counter.reachGoal('inside-article')"></a>
     -{{/if}}
     <p class="news">
         {{{ processedDescription }}}
-        {{#if body}}
+        {{#if processedBody}}
             <a class="episode-more">More...</a>
         {{/if}}
     </p>
