fixed scroll on ipad

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=.7, maximum-scale=.7" />
 	<title>Upvoc</title>
-	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
 	<link href="/css/myapp.css" rel="stylesheet">
 	<link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow:700&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:700&subset=latin,cyrillic-ext,latin-ext' rel='stylesheet' type='text/css'>
@@ -15,8 +15,7 @@
 		<div class="functions-language">
 		</div>
 	</div>
-<div class="center-block">
-<div id="pc-container">
+
 	 <div class="main-header clearfix">
 		<div class="logo">
 			<a href="/">upvoc</a>
@@ -67,20 +66,19 @@
 					</div>
 				<div class="enter"></div>
 			</div>
+    <div class="center-block">
 
-			<div class="bottom-section">
-				<ul class="menu clearfix">
-					<li><a href="#"><span>All</span></a></li>
-					<li><a href="#category/world"><span>World</span></a></li>
-					<li><a href="#category/politics"><span>Politics</span></a></li>
-					<li><a href="#category/social"><span>Social</span></a></li>
-					<li><a href="#category/economics"><span>Economics</span></a></li>
-					<li><a href="#category/sport"><span>Sport</span></a></li>
-					<li><a href="#category/science"><span>Science</span></a></li>
-					<li><a href="#category/tech"><span>Technology</span></a></li>
-					<li><a href="#category/culture"><span>Culture</span></a></li>
-				</ul>
-			</div>
+            <ul class="menu clearfix">
+                <li><a href="#"><span>All</span></a></li>
+                <li><a href="#category/world"><span>World</span></a></li>
+                <li><a href="#category/politics"><span>Politics</span></a></li>
+                <li><a href="#category/social"><span>Social</span></a></li>
+                <li><a href="#category/economics"><span>Economics</span></a></li>
+                <li><a href="#category/sport"><span>Sport</span></a></li>
+                <li><a href="#category/science"><span>Science</span></a></li>
+                <li><a href="#category/tech"><span>Technology</span></a></li>
+                <li><a href="#category/culture"><span>Culture</span></a></li>
+            </ul>
 		<div class="middle-section">
 		<div class="top-line clearfix tip-of-the-day">
 				<div class="allocation">
@@ -92,7 +90,6 @@
 
 			<div class="dictionaries-section clearfix">
 			</div>
-		</div>
 
 	</div>
 	<div class="showsettings"><span class="showspan">Show my translations</span></div>
